fix css textarea alignment udpate icon for json formatting

--- a/tools/css/site.css
+++ b/tools/css/site.css
@@ -3,6 +3,13 @@
     font-size: 12px;
 }
 
+.start .textarea.input-group {
+    padding: 0;
+}
+.start .textarea.input-group label {
+    top: 12px;
+}
+
 .errorMessage {
     white-space: nowrap;
     overflow: hidden;
